--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,12 @@ pages:
 - About: 'about/about.md'
 - Documentation:
     - 1. Getting Started:
-        - '1.1 Overview': '1.-Getting-Started/1.1-Overview.md'
-        - '1.2 System requirements': '1.-Getting-Started/1.2-System-requirements.md'
-        - '1.3 Installation and Deployment': '1.-Getting-Started/1.3-Installation-and-Deployment.md'
-    - 2. Modules:
-        - '2.1 Overview': '2.-Modules/2.1-Overview.md'
-    - 3. Dataflows:
+        - '1.1 Overview': '01.Getting-Started/01.Overview.md'
+        - '1.2 System requirements': '01.Getting-Started/02.System-Requirements.md'
+        - '1.3 Installation and Deployment': '01.Getting-Started/03.Installation-and-Deployment.md'
+    - 2. DataFlows:
+        - '3.1 Overview': '3.-Dataflows/3.1-Overview.md'
+    - 3. QueryViews:
         - '3.1 Overview': '3.-Dataflows/3.1-Overview.md'
     - 4. Boards:
         - '4.1 Overview': '4.-Boards/4.1-Overview.md'
