--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,11 +16,11 @@ pages:
         - '2.1 DataFlow Reuse': '02.DataFlows/06.DataFlow-Reuse.md'
         - '2.1 Alerts': '02.DataFlows/07.Alerts.md'
         - 2.8 Data Sources:
-            - '2.8 Data Sources': 02.DataFlows/08.Data-Sources/01.Overview.md'
+            - '2.8 Data Sources': '02.DataFlows/08.Data-Sources/01.Overview.md'
         - 2.9 Analytics:
-            - '2.8 Data Sources': 02.DataFlows/09.Analytics/01.Overview.md'
+            - '2.8 Data Sources': '02.DataFlows/09.Analytics/01.Overview.md'
         - 2.10 DataFlow Patterns:
-            - '2.8 Data Sources': 02.DataFlows/10.DataFlow-Patterns/01.Overview.md'
+            - '2.8 Data Sources': '02.DataFlows/10.DataFlow-Patterns/01.Overview.md'
     - 3. QueryViews:
         - '3.1 Overview': '03.Dataflows/01.Overview.md'
     - 4. DataPortals:
