docs.composable.ai

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,39 +7,41 @@ pages:
         - '1.1 Overview': '01.Getting-Started/01.Overview.md'
         - '1.2 System requirements': '01.Getting-Started/02.System-Requirements.md'
         - '1.3 Installation and Deployment': '01.Getting-Started/03.Installation-and-Deployment.md'
-    - 2. DataFlows:
-        - '2.1 Overview': '02.DataFlows/01.Overview.md'
-        - '2.2 Composable Designer': '02.DataFlows/02.Composable-Designer.md'
-        - '2.3 KeyBoard Shortcuts': '02.DataFlows/03.KeyBoard-Shortcuts.md'
-        - '2.4 Modules': '02.DataFlows/04.Modules.md'
-        - '2.5 DataFlows': '02.DataFlows/05.DataFlows.md'
-        - '2.6 DataFlow Reuse': '02.DataFlows/06.DataFlow-Reuse.md'
-        - '2.7 Alerts': '02.DataFlows/07.Alerts.md'
-        - 2.8 Data Sources:
-            - '2.8 Data Sources': '02.DataFlows/08.Data-Sources/01.Overview.md'
-        - 2.9 Analytics:
-            - '2.9 Analytics': '02.DataFlows/09.Analytics/01.Overview.md'
-        - 2.10 DataFlow Patterns:
-            - '2.10 DataFlow Patterns': '02.DataFlows/10.DataFlow-Patterns/01.Overview.md'
-    - 3. QueryViews:
-        - '3.1 Overview': '03.Dataflows/01.Overview.md'
-    - 4. DataPortals:
-        - '4.1 Overview': '04.DataPortals/01.Overview.md'
-    - 5. WebApps:
-        - '5.1 Overview': '05.WebApps/01.Overview.md'
+    - 2. Composable Platform:
+        - '2.1 Overview': '02.Dataflows/01.Overview.md'    
+    - 3. DataFlows:
+        - '3.1 Overview': '02.DataFlows/01.Overview.md'
+        - '3.2 Composable Designer': '02.DataFlows/02.Composable-Designer.md'
+        - '3.3 KeyBoard Shortcuts': '02.DataFlows/03.KeyBoard-Shortcuts.md'
+        - '3.4 Modules': '02.DataFlows/04.Modules.md'
+        - '3.5 DataFlows': '02.DataFlows/05.DataFlows.md'
+        - '3.6 DataFlow Reuse': '02.DataFlows/06.DataFlow-Reuse.md'
+        - '3.7 Alerts': '02.DataFlows/07.Alerts.md'
+        - 3.8 Data Sources:
+            - '3.8 Data Sources': '03.DataFlows/08.Data-Sources/01.Overview.md'
+        - 3.9 Analytics:
+            - '3.9 Analytics': '03.DataFlows/09.Analytics/01.Overview.md'
+        - 3.10 DataFlow Patterns:
+            - '3.10 DataFlow Patterns': '03.DataFlows/10.DataFlow-Patterns/01.Overview.md'
+    - 4. QueryViews:
+        - '4.1 Overview': '04.Dataflows/01.Overview.md'
+    - 5. DataPortals:
+        - '5.1 Overview': '05.DataPortals/01.Overview.md'
     - 6. DataExplorer:
         - '6.1 Overview': '06.DataExplorer/01.Overview.md'
     - 7. DashBoards:
         - '7.1 Overview': '07.DashBoards/01.Overview.md'
-    - 8. Keys:
-        - '8.1 Overview': '08.Keys/01.Overview.md'
-    - 9. Users and Groups:
-        - '9.1 Overview': '09.Users-and-Groups/01.Overview.md'
-    - 10. FluentAPI:
-        - '10.1 FluentAPI User Guide': '10.FluentAPI/01.FluentAPI-User-Guide.md'
-        - '10.2 FluentAPI Reference': '10.FluentAPI/02.FluentAPI-Reference.md'
-    - 11. How to Articles:
-        - '11.1 Overview': '01.How-To-Articles/10.1-Overview.md'
-    - 12. Quick Reference Guides:
-        - '12.1 Overview': '12.Quick-Reference-Guides/01.Overview.md'
+    - 8. WebApps:
+        - '8.1 Overview': '08.WebApps/01.Overview.md'
+    - 9. Keys:
+        - '9.1 Overview': '09.Keys/01.Overview.md'
+    - 10. Users and Groups:
+        - '10.1 Overview': '10.Users-and-Groups/01.Overview.md'
+    - 11. FluentAPI:
+        - '11.1 FluentAPI User Guide': '11.FluentAPI/01.FluentAPI-User-Guide.md'
+        - '11.2 FluentAPI Reference': '11.FluentAPI/02.FluentAPI-Reference.md'
+    - 12. How to Articles:
+        - '12.1 Overview': '12.How-To-Articles/10.1-Overview.md'
+    - 13. Quick Reference Guides:
+        - '13.1 Overview': '12.Quick-Reference-Guides/01.Overview.md'
 theme: readthedocs
