--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ pages:
         - '1.2 System requirements': '01.Getting-Started/02.System-Requirements.md'
         - '1.3 Installation and Deployment': '01.Getting-Started/03.Installation-and-Deployment.md'
     - 2. Composable Platform:
-        - '2.1 Overview': '02.Dataflows/01.Overview.md'    
+        - '2.1 Overview': '02.Composable-Platform/01.Overview.md'    
     - 3. DataFlows:
         - '3.1 Overview': '02.DataFlows/01.Overview.md'
         - '3.2 Composable Designer': '02.DataFlows/02.Composable-Designer.md'
