--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Composable DataOps PPlatform Docs
+site_name: Composable DataOps Platform
 site_url: https://docs.composable.ai
 site_description: Composable DataOps Platform technical documentation for big data orchestration, automation and analytics
 site_author: Composable Analytics, Inc.
