--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ pages:
         - '3.5 DataFlows': '03.DataFlows/05.DataFlows.md'
         - '3.6 DataFlow Reuse': '03.DataFlows/06.DataFlow-Reuse.md'
         - '3.7 Custom Module Extensions': '03.DataFlows/07.Custom-Modules.md'
+        - '3.8 Example DataFlows': '03.DataFlows/08.Example-DataFlows.md'
     - 4. QueryViews:
         - '4.1 Overview': '04.QueryViews/01.Overview.md'
     - 5. DataPortals:
