--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,8 +35,11 @@ pages:
         - '3.8 Example DataFlows': '03.DataFlows/08.Example-DataFlows.md'
     - 4. QueryViews:
         - '4.1 Overview': '04.QueryViews/01.Overview.md'
+        - '4.2 QueryView Creation': '04.QueryViews/02.Create-QueryView.md'
     - 5. DataPortals:
         - '5.1 Overview': '05.DataPortals/01.Overview.md'
+        - '5.2 DataPortals Creation': '05.DataPortals/01.Create-DataPortals.md'
+        - '5.3 Search': '05.DataPortals/01.Search-Features.md'
     - 6. DataExplorer:
         - '6.1 Overview': '06.DataExplorer/01.Overview.md'
     - 7. DashBoards:
