--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,9 @@ pages:
         - '3.6 DataFlow Reuse': '03.DataFlows/06.DataFlow-Reuse.md'
         - '3.7 Custom Module Extensions': '03.DataFlows/07.Custom-Modules.md'
         - '3.8 Example DataFlows': '03.DataFlows/08.Example-DataFlows.md'
+        - 3.9 Module Details:
+            - 'DataPortal Delete': '03.DataFlows/09.Module-Details/DataPortalDelete.md'
+            - 'DataPortal Sync': '03.DataFlows/09.Module-Details/DataPortalSync.md'
     - 4. QueryViews:
         - '4.1 Overview': '04.QueryViews/01.Overview.md'
         - '4.2 QueryView Creation': '04.QueryViews/02.Create-QueryView.md'
