--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,129 +15,129 @@ theme:
 nav:
 - Home: 'index.md'
 - About: 'about/about.md'
-- Documentation:
-    - 1. Getting Started:
-        - '1.1 Overview': 'Getting-Started/01.Overview.md'
-        - '1.2 System requirements': 'Getting-Started/02.System-Requirements.md'
-        - '1.3 Installation and Deployment': 'Getting-Started/03.Installation-and-Deployment.md'
-        - '1.4 Public Cloud Deployment': 'Getting-Started/04.Public-Cloud-Deployment.md'
-    - 2. Composable Platform:
-        - '2.1 Overview': 'Composable-Platform/01.Overview.md'
-        - '2.2 Navigation': 'Composable-Platform/02.Navigation.md'
-        - '2.3 Search': 'Composable-Platform/03.Search.md'
-        - '2.4 Product Areas': 'Composable-Platform/04.Product-Areas.md'
-        - '2.5 System Administration': 'Composable-Platform/05.System-Administration.md'
-    - 3. DataFlows:
-        - '3.1 Overview': 'DataFlows/01.Overview.md'
-        - '3.2 Composable Designer': 'DataFlows/02.Composable-Designer.md'
-        - '3.3 KeyBoard Shortcuts': 'DataFlows/03.KeyBoard-Shortcuts.md'
-        - '3.4 Modules': 'DataFlows/04.Modules.md'
-        - '3.5 DataFlows': 'DataFlows/05.DataFlows.md'
-        - '3.6 DataFlow Reuse': 'DataFlows/06.DataFlow-Reuse.md'
-        - '3.7 Custom Module Extensions': 'DataFlows/07.Custom-Modules.md'
-        - '3.8 Example DataFlows': 'DataFlows/08.Example-DataFlows.md'
-        - 3.9 Module Details:
-            - 'DataPortal Delete': 'DataFlows/09.Module-Details/DataPortalDelete.md'
-            - 'DataPortal Sync': 'DataFlows/09.Module-Details/DataPortalSync.md'
-    - 4. QueryViews:
-        - '4.1 Overview': 'QueryViews/01.Overview.md'
-        - '4.2 QueryView Creation': 'QueryViews/02.Create-QueryView.md'
-    - 5. DataPortals:
-        - '5.1 Overview': 'DataPortals/01.Overview.md'
-        - '5.2 DataPortal Creation': 'DataPortals/02.Create-DataPortals.md'
-        - '5.3 Search': 'DataPortals/03.Search-Features.md'
-        - '5.4 Categories': 'DataPortals/04.Categories.md'
-        - 5.5 Control Type Details:
-            - 'AppRun': 'DataPortals/05.Control-Details/AppRun.md'
-            - 'Category': 'DataPortals/05.Control-Details/Category.md'
-            - 'ClearButton': 'DataPortals/05.Control-Details/ClearButton.md'
-            - 'CheckBox': 'DataPortals/05.Control-Details/CheckBox.md'
-            - 'Computed': 'DataPortals/05.Control-Details/Computed.md'
-            - 'Date': 'DataPortals/05.Control-Details/Date.md'
-            - 'DateTime': 'DataPortals/05.Control-Details/DateTime.md'
-            - 'HyperLink': 'DataPortals/05.Control-Details/HyperLink.md'
-            - 'Label': 'DataPortals/05.Control-Details/Label.md'
-            - 'Link': 'DataPortals/05.Control-Details/Link.md'
-            - 'NumberFormatting': 'DataPortals/05.Control-Details/NumberFormatting.md'
-            - 'Page': 'DataPortals/05.Control-Details/Page.md'
-            - 'Phone': 'DataPortals/05.Control-Details/Phone.md'
-            - 'QueryView': 'DataPortals/05.Control-Details/QueryView.md'
-            - 'QueryViewChooser': 'DataPortals/05.Control-Details/QueryViewChooser.md'
-            - 'Radio': 'DataPortals/05.Control-Details/Radio.md'
-            - 'Rating': 'DataPortals/05.Control-Details/Rating.md'
-            - 'Reference': 'DataPortals/05.Control-Details/Reference.md'
-            - 'SaveButton': 'DataPortals/05.Control-Details/SaveButton.md'
-            - 'Spin': 'DataPortals/05.Control-Details/Spin.md'
-            - 'SSN': 'DataPortals/05.Control-Details/SSN.md'
-            - 'Tab': 'DataPortals/05.Control-Details/Tab.md'
-            - 'Table': 'DataPortals/05.Control-Details/Table.md'
-            - 'Text': 'DataPortals/05.Control-Details/Text.md'
-            - 'Textarea': 'DataPortals/05.Control-Details/Textarea.md'
-            - 'Voice': 'DataPortals/05.Control-Details/Voice.md'
-            - 'YesNo': 'DataPortals/05.Control-Details/YesNo.md'
-            - 'ZIP': 'DataPortals/05.Control-Details/ZIP.md'
-        - 5.6 Setting Details:
-            - 'AfterSaveUri': 'DataPortals/06.Setting-Details/AfterSaveUri.md'
-            - 'ClearWhenHidden': 'DataPortals/06.Setting-Details/ClearWhenHidden.md'
-            - 'Columns': 'DataPortals/06.Setting-Details/Columns.md'
-            - 'ComputedCondition': 'DataPortals/06.Setting-Details/ComputedCondition.md'
-            - 'ControlGroup': 'DataPortals/06.Setting-Details/ControlGroup.md'
-            - 'ControlType': 'DataPortals/06.Setting-Details/ControlType.md'
-            - 'CustomIndex': 'DataPortals/06.Setting-Details/CustomIndex.md'
-            - 'DefaultSearchFilter': 'DataPortals/06.Setting-Details/DefaultSearchFilter.md'
-            - 'DefaultValue': 'DataPortals/06.Setting-Details/DefaultValue.md'
-            - 'DeleteType': 'DataPortals/06.Setting-Details/DeleteType.md'
-            - 'Description': 'DataPortals/06.Setting-Details/Description.md'
-            - 'DisplayName': 'DataPortals/06.Setting-Details/DisplayName.md'
-            - 'EndLabel': 'DataPortals/06.Setting-Details/EndLabel.md'
-            - 'FormattingLocale': 'DataPortals/06.Setting-Details/FormattingLocale.md'
-            - 'FormattingOptions': 'DataPortals/06.Setting-Details/FormattingOptions.md'
-            - 'Group': 'DataPortals/06.Setting-Details/Group.md'
-            - 'Href': 'DataPortals/06.Setting-Details/Href.md'
-            - 'InvalidMessage': 'DataPortals/06.Setting-Details/InvalidMessage.md'
-            - 'MaskedCondition': 'DataPortals/06.Setting-Details/MaskedCondition.md'
-            - 'Max': 'DataPortals/06.Setting-Details/Max.md'
-            - 'Min': 'DataPortals/06.Setting-Details/Min.md'
-            - 'Name': 'DataPortals/06.Setting-Details/Name.md'
-            - 'OptionController': 'DataPortals/06.Setting-Details/OptionController.md'
-            - 'Pattern': 'DataPortals/06.Setting-Details/Pattern.md'
-            - 'PatternFlags': 'DataPortals/06.Setting-Details/PatternFlags.md'
-            - 'ReadOnlyCondition': 'DataPortals/06.Setting-Details/ReadOnlyCondition.md'
-            - 'RefreshComponents': 'DataPortals/06.Setting-Details/RefreshComponents.md'
-            - 'Required': 'DataPortals/06.Setting-Details/Required.md'
-            - 'SaveBeforeRun': 'DataPortals/06.Setting-Details/SaveBeforeRun.md'
-            - 'SearchBoxes': 'DataPortals/06.Setting-Details/SearchBoxes.md'
-            - 'Separator': 'DataPortals/06.Setting-Details/Separator.md'
-            - 'StartLabel': 'DataPortals/06.Setting-Details/StartLabel.md'
-            - 'StrMax': 'DataPortals/06.Setting-Details/StrMax.md'
-            - 'StrMin': 'DataPortals/06.Setting-Details/StrMin.md'
-            - 'Style': 'DataPortals/06.Setting-Details/Style.md'
-            - 'TabIndex': 'DataPortals/06.Setting-Details/TabIndex.md'
-            - 'Target': 'DataPortals/06.Setting-Details/Target.md'
-            - 'Type': 'DataPortals/06.Setting-Details/Type.md'
-            - 'UniqueConstraint': 'DataPortals/06.Setting-Details/UniqueConstraint.md'
-            - 'UniqueConstraintScopeToParent': 'DataPortals/06.Setting-Details/UniqueConstraintScopeToParent.md'
-            - 'ValidationCondition': 'DataPortals/06.Setting-Details/ValidationCondition.md'
-            - 'VisibilityCondition': 'DataPortals/06.Setting-Details/VisibilityCondition.md'
-    - 6. DataRepository:
-        - '6.1 Overview': 'DataRepository/01.Overview.md'
-    - 7. DashBoards:
-        - '7.1 Overview': 'DashBoards/01.Overview.md'
-    - 8. WebApps:
-        - '8.1 Overview': 'WebApps/01.Overview.md'
-    - 9. Keys:
-        - '9.1 Overview': 'Keys/01.Overview.md'
-        - '9.2 Using Keys': 'Keys/02.Using-Keys.md'
-    - 10. Users and Groups:
-        - '10.1 Overview': 'Users-and-Groups/01.Overview.md'
-    - 11. FluentAPI:
-        - '11.1 FluentAPI User Guide': 'FluentAPI/01.FluentAPI-User-Guide.md'
-        - '11.2 FluentAPI Reference': 'FluentAPI/02.FluentAPI-Reference.md'
-    - 12. Code Promotion:
-        - '12.1 Overview': 'Code-Promotion/01.Overview.md'
-        - '12.2 Setup': 'Code-Promotion/02.Setup.md'
-        - '12.3 Optional Settings': 'Code-Promotion/03.Optional-Settings.md'
-        - '12.4 Possible-Issues': 'Code-Promotion/04.Possible-Issues.md'
+#- Documentation:
+- 1. Getting Started:
+    - '1.1 Overview': 'Getting-Started/01.Overview.md'
+    - '1.2 System requirements': 'Getting-Started/02.System-Requirements.md'
+    - '1.3 Installation and Deployment': 'Getting-Started/03.Installation-and-Deployment.md'
+    - '1.4 Public Cloud Deployment': 'Getting-Started/04.Public-Cloud-Deployment.md'
+- 2. Composable Platform:
+    - '2.1 Overview': 'Composable-Platform/01.Overview.md'
+    - '2.2 Navigation': 'Composable-Platform/02.Navigation.md'
+    - '2.3 Search': 'Composable-Platform/03.Search.md'
+    - '2.4 Product Areas': 'Composable-Platform/04.Product-Areas.md'
+    - '2.5 System Administration': 'Composable-Platform/05.System-Administration.md'
+- 3. DataFlows:
+    - '3.1 Overview': 'DataFlows/01.Overview.md'
+    - '3.2 Composable Designer': 'DataFlows/02.Composable-Designer.md'
+    - '3.3 KeyBoard Shortcuts': 'DataFlows/03.KeyBoard-Shortcuts.md'
+    - '3.4 Modules': 'DataFlows/04.Modules.md'
+    - '3.5 DataFlows': 'DataFlows/05.DataFlows.md'
+    - '3.6 DataFlow Reuse': 'DataFlows/06.DataFlow-Reuse.md'
+    - '3.7 Custom Module Extensions': 'DataFlows/07.Custom-Modules.md'
+    - '3.8 Example DataFlows': 'DataFlows/08.Example-DataFlows.md'
+    - 3.9 Module Details:
+        - 'DataPortal Delete': 'DataFlows/09.Module-Details/DataPortalDelete.md'
+        - 'DataPortal Sync': 'DataFlows/09.Module-Details/DataPortalSync.md'
+- 4. QueryViews:
+    - '4.1 Overview': 'QueryViews/01.Overview.md'
+    - '4.2 QueryView Creation': 'QueryViews/02.Create-QueryView.md'
+- 5. DataPortals:
+    - '5.1 Overview': 'DataPortals/01.Overview.md'
+    - '5.2 DataPortal Creation': 'DataPortals/02.Create-DataPortals.md'
+    - '5.3 Search': 'DataPortals/03.Search-Features.md'
+    - '5.4 Categories': 'DataPortals/04.Categories.md'
+    - 5.5 Control Type Details:
+        - 'AppRun': 'DataPortals/05.Control-Details/AppRun.md'
+        - 'Category': 'DataPortals/05.Control-Details/Category.md'
+        - 'ClearButton': 'DataPortals/05.Control-Details/ClearButton.md'
+        - 'CheckBox': 'DataPortals/05.Control-Details/CheckBox.md'
+        - 'Computed': 'DataPortals/05.Control-Details/Computed.md'
+        - 'Date': 'DataPortals/05.Control-Details/Date.md'
+        - 'DateTime': 'DataPortals/05.Control-Details/DateTime.md'
+        - 'HyperLink': 'DataPortals/05.Control-Details/HyperLink.md'
+        - 'Label': 'DataPortals/05.Control-Details/Label.md'
+        - 'Link': 'DataPortals/05.Control-Details/Link.md'
+        - 'NumberFormatting': 'DataPortals/05.Control-Details/NumberFormatting.md'
+        - 'Page': 'DataPortals/05.Control-Details/Page.md'
+        - 'Phone': 'DataPortals/05.Control-Details/Phone.md'
+        - 'QueryView': 'DataPortals/05.Control-Details/QueryView.md'
+        - 'QueryViewChooser': 'DataPortals/05.Control-Details/QueryViewChooser.md'
+        - 'Radio': 'DataPortals/05.Control-Details/Radio.md'
+        - 'Rating': 'DataPortals/05.Control-Details/Rating.md'
+        - 'Reference': 'DataPortals/05.Control-Details/Reference.md'
+        - 'SaveButton': 'DataPortals/05.Control-Details/SaveButton.md'
+        - 'Spin': 'DataPortals/05.Control-Details/Spin.md'
+        - 'SSN': 'DataPortals/05.Control-Details/SSN.md'
+        - 'Tab': 'DataPortals/05.Control-Details/Tab.md'
+        - 'Table': 'DataPortals/05.Control-Details/Table.md'
+        - 'Text': 'DataPortals/05.Control-Details/Text.md'
+        - 'Textarea': 'DataPortals/05.Control-Details/Textarea.md'
+        - 'Voice': 'DataPortals/05.Control-Details/Voice.md'
+        - 'YesNo': 'DataPortals/05.Control-Details/YesNo.md'
+        - 'ZIP': 'DataPortals/05.Control-Details/ZIP.md'
+    - 5.6 Setting Details:
+        - 'AfterSaveUri': 'DataPortals/06.Setting-Details/AfterSaveUri.md'
+        - 'ClearWhenHidden': 'DataPortals/06.Setting-Details/ClearWhenHidden.md'
+        - 'Columns': 'DataPortals/06.Setting-Details/Columns.md'
+        - 'ComputedCondition': 'DataPortals/06.Setting-Details/ComputedCondition.md'
+        - 'ControlGroup': 'DataPortals/06.Setting-Details/ControlGroup.md'
+        - 'ControlType': 'DataPortals/06.Setting-Details/ControlType.md'
+        - 'CustomIndex': 'DataPortals/06.Setting-Details/CustomIndex.md'
+        - 'DefaultSearchFilter': 'DataPortals/06.Setting-Details/DefaultSearchFilter.md'
+        - 'DefaultValue': 'DataPortals/06.Setting-Details/DefaultValue.md'
+        - 'DeleteType': 'DataPortals/06.Setting-Details/DeleteType.md'
+        - 'Description': 'DataPortals/06.Setting-Details/Description.md'
+        - 'DisplayName': 'DataPortals/06.Setting-Details/DisplayName.md'
+        - 'EndLabel': 'DataPortals/06.Setting-Details/EndLabel.md'
+        - 'FormattingLocale': 'DataPortals/06.Setting-Details/FormattingLocale.md'
+        - 'FormattingOptions': 'DataPortals/06.Setting-Details/FormattingOptions.md'
+        - 'Group': 'DataPortals/06.Setting-Details/Group.md'
+        - 'Href': 'DataPortals/06.Setting-Details/Href.md'
+        - 'InvalidMessage': 'DataPortals/06.Setting-Details/InvalidMessage.md'
+        - 'MaskedCondition': 'DataPortals/06.Setting-Details/MaskedCondition.md'
+        - 'Max': 'DataPortals/06.Setting-Details/Max.md'
+        - 'Min': 'DataPortals/06.Setting-Details/Min.md'
+        - 'Name': 'DataPortals/06.Setting-Details/Name.md'
+        - 'OptionController': 'DataPortals/06.Setting-Details/OptionController.md'
+        - 'Pattern': 'DataPortals/06.Setting-Details/Pattern.md'
+        - 'PatternFlags': 'DataPortals/06.Setting-Details/PatternFlags.md'
+        - 'ReadOnlyCondition': 'DataPortals/06.Setting-Details/ReadOnlyCondition.md'
+        - 'RefreshComponents': 'DataPortals/06.Setting-Details/RefreshComponents.md'
+        - 'Required': 'DataPortals/06.Setting-Details/Required.md'
+        - 'SaveBeforeRun': 'DataPortals/06.Setting-Details/SaveBeforeRun.md'
+        - 'SearchBoxes': 'DataPortals/06.Setting-Details/SearchBoxes.md'
+        - 'Separator': 'DataPortals/06.Setting-Details/Separator.md'
+        - 'StartLabel': 'DataPortals/06.Setting-Details/StartLabel.md'
+        - 'StrMax': 'DataPortals/06.Setting-Details/StrMax.md'
+        - 'StrMin': 'DataPortals/06.Setting-Details/StrMin.md'
+        - 'Style': 'DataPortals/06.Setting-Details/Style.md'
+        - 'TabIndex': 'DataPortals/06.Setting-Details/TabIndex.md'
+        - 'Target': 'DataPortals/06.Setting-Details/Target.md'
+        - 'Type': 'DataPortals/06.Setting-Details/Type.md'
+        - 'UniqueConstraint': 'DataPortals/06.Setting-Details/UniqueConstraint.md'
+        - 'UniqueConstraintScopeToParent': 'DataPortals/06.Setting-Details/UniqueConstraintScopeToParent.md'
+        - 'ValidationCondition': 'DataPortals/06.Setting-Details/ValidationCondition.md'
+        - 'VisibilityCondition': 'DataPortals/06.Setting-Details/VisibilityCondition.md'
+- 6. DataRepository:
+    - '6.1 Overview': 'DataRepository/01.Overview.md'
+- 7. DashBoards:
+    - '7.1 Overview': 'DashBoards/01.Overview.md'
+- 8. WebApps:
+    - '8.1 Overview': 'WebApps/01.Overview.md'
+- 9. Keys:
+    - '9.1 Overview': 'Keys/01.Overview.md'
+    - '9.2 Using Keys': 'Keys/02.Using-Keys.md'
+- 10. Users and Groups:
+    - '10.1 Overview': 'Users-and-Groups/01.Overview.md'
+- 11. FluentAPI:
+    - '11.1 FluentAPI User Guide': 'FluentAPI/01.FluentAPI-User-Guide.md'
+    - '11.2 FluentAPI Reference': 'FluentAPI/02.FluentAPI-Reference.md'
+- 12. Code Promotion:
+    - '12.1 Overview': 'Code-Promotion/01.Overview.md'
+    - '12.2 Setup': 'Code-Promotion/02.Setup.md'
+    - '12.3 Optional Settings': 'Code-Promotion/03.Optional-Settings.md'
+    - '12.4 Possible-Issues': 'Code-Promotion/04.Possible-Issues.md'
     
 markdown_extensions:
   - admonition
