--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,7 +140,7 @@ nav:
     - '12.3 Optional Settings': 'Code-Promotion/03.Optional-Settings.md'
     - '12.4 Possible-Issues': 'Code-Promotion/04.Possible-Issues.md'
 - Tutorials:
-    - 'Lunch Recommender Slack App': 'Tutorials/Lunch.md'
+    - 'Lunch Recommender Slack App': 'Tutorial/Lunch.md'
 
 markdown_extensions:
   - admonition
