--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,10 +6,13 @@ site_author: Composable Analytics, Inc.
 repo_url: https://github.com/ComposableAnalytics/Docs
 
 theme:
-    name: null
-    custom_dir: 'mkdocs_windmill'
-    search_index_only: true
-    include_search_page: true
+    name: material
+    custom_dir: 'themeExtension'
+    palette:
+      primary: blue grey
+    logo: img/ComposableLogo.png
+    features:
+      - toc.integrate
 
 
 nav:
@@ -18,7 +21,7 @@ nav:
 #- Documentation:
 - 1. Getting Started:
     - '1.1 Overview': 'Getting-Started/01.Overview.md'
-    - '1.2 System requirements': 'Getting-Started/02.System-Requirements.md'
+    - '1.2 System Requirements': 'Getting-Started/02.System-Requirements.md'
     - '1.3 Installation and Deployment': 'Getting-Started/03.Installation-and-Deployment.md'
     - '1.4 Public Cloud Deployment': 'Getting-Started/04.Public-Cloud-Deployment.md'
 - 2. Composable Platform:
@@ -157,4 +160,5 @@ nav:
 
 markdown_extensions:
   - admonition
-  - lightgallery
+  - lightgallery:
+      show_description_in_lightgallery: true  
