--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,8 @@ nav:
     - '2.2 Navigation': 'Composable-Platform/02.Navigation.md'
     - '2.3 Search': 'Composable-Platform/03.Search.md'
     - '2.4 Product Areas': 'Composable-Platform/04.Product-Areas.md'
-    - '2.5 System Administration': 'Composable-Platform/05.System-Administration.md'
+    - '2.5 User Profile': 'Composable-Platform/05.User-Profile.md'
+    - '2.6 System Administration': 'Composable-Platform/05.System-Administration.md'
 - 3. DataFlows:
     - '3.1 Overview': 'DataFlows/01.Overview.md'
     - '3.2 Composable Designer': 'DataFlows/02.Composable-Designer.md'
