user profile page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,6 +146,7 @@ nav:
     - '8.1 Overview': 'DashBoards/01.Overview.md'
 - 9. WebApps:
     - '9.1 Overview': 'WebApps/01.Overview.md'
+    - '9.2 WebApp Basics': 'WebApps/02.WebApp-Basics.md'
 - 10. Keys:
     - '10.1 Overview': 'Keys/01.Overview.md'
     - '10.2 Using Keys': 'Keys/02.Using-Keys.md'
