--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,8 +40,9 @@ nav:
     - '3.7 Custom Module Extensions': 'DataFlows/07.Custom-Modules.md'
     - '3.8 Example DataFlows': 'DataFlows/08.Example-DataFlows.md'
     - 3.9 Module Details:
-        - 'DataPortal Delete': 'DataFlows/09.Module-Details/DataPortalDelete.md'
-        - 'DataPortal Sync': 'DataFlows/09.Module-Details/DataPortalSync.md'
+        - 'Code Module': 'DataFlows/09.Module-Details/Code-Module.md'
+        - 'DataPortal Delete Module': 'DataFlows/09.Module-Details/DataPortalDelete.md'
+        - 'DataPortal Sync Module': 'DataFlows/09.Module-Details/DataPortalSync.md'
     - '3.10 Runs': 'DataFlows/10.Runs.md'
 - 4. QueryViews:
     - '4.1 Overview': 'QueryViews/01.Overview.md'
