--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,17 +140,17 @@ nav:
     - '6.1 Overview': 'DataRepository/01.Overview.md'
     - '6.2 DataRepository Basics': 'DataRepository/Create-DataRepository.md'
     - '6.3 Repository Details': 'DataRepository/Repository-Details.md'
-    - '6.4 QueryDives': 'DataRepository/QueryDive-Overview.md'
-    - '6.5 QueryDive Basics': 'DataRepository/QueryDive-Basics.md'
-    - '6.6 QueryDive Details': 'DataRepository/QueryDive-Details.md'
-    - 6.7 QueryDive Fields:
+    - '6.4 DeepQueries': 'DataRepository/DeepQuery-Overview.md'
+    - '6.5 DeepQuery Basics': 'DataRepository/DeepQuery-Basics.md'
+    - '6.6 DeepQuery Details': 'DataRepository/DeepQuery-Details.md'
+    - 6.7 DeepQuery Fields:
         - 'Simple Fields': 'DataRepository/Field-Types/Simple.md'
         - 'Aggregate Fields': 'DataRepository/Field-Types/Aggregate.md'
         - 'Constant Fields': 'DataRepository/Field-Types/Constant.md'
-    - 6.8 QueryDive Filters:
+    - 6.8 DeepQuery Filters:
         - 'Value Filters': 'DataRepository/Filter-Types/Value.md'
         - 'Condition Filters': 'DataRepository/Filter-Types/Condition.md'
-    - 6.9 QueryDive Collection Actions:
+    - 6.9 DeepQuery Collection Actions:
         - 'Add': 'DataRepository/Collection-Menu-Options/Add.md'
         - 'Remove': 'DataRepository/Collection-Menu-Options/Remove.md'
         - 'Edit': 'DataRepository/Collection-Menu-Options/Edit.md'
@@ -158,7 +158,7 @@ nav:
         - 'Add Field': 'DataRepository/Collection-Menu-Options/Add-Field.md'
         - 'Default Paging': 'DataRepository/Collection-Menu-Options/Default-Paging.md'
         - 'Rename': 'DataRepository/Collection-Menu-Options/Rename.md'
-    - 6.10 QueryDive Field Actions:
+    - 6.10 DeepQuery Field Actions:
         - 'Add': 'DataRepository/Field-Menu-Options/Add.md'
         - 'Show': 'DataRepository/Field-Menu-Options/Show.md'
         - 'Remove': 'DataRepository/Field-Menu-Options/Remove.md'
