--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,9 @@ nav:
     - '1.1 Overview': 'Getting-Started/01.Overview.md'
     - '1.2 System Requirements': 'Getting-Started/02.System-Requirements.md'
     - '1.3 Installation and Deployment': 'Getting-Started/03.Installation-and-Deployment.md'
-    - '1.4 Public Cloud Deployment': 'Getting-Started/04.Public-Cloud-Deployment.md'
+    - Installation Options:
+        - 'Composable Installer - GUI': 'Getting-Started/03-1.Installation-GUI.md'
+        - 'Deployment Scripts': 'Getting-Started/03-2.Deployment-Scripts.md'
 - 2. Composable Platform:
     - '2.1 Overview': 'Composable-Platform/01.Overview.md'
     - '2.2 Navigation': 'Composable-Platform/02.Navigation.md'
