--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,8 +180,12 @@ nav:
 - 9. WebApps:
     - '9.1 Overview': 'WebApps/01.Overview.md'
     - '9.2 WebApp Basics': 'WebApps/02.WebApp-Basics.md'
-- 10. DashBoards:
+- 10. Boards:
     - '10.1 Overview': 'DashBoards/01.Overview.md'
+    - '10.2 Edit Mode': 'DashBoards/02.Edit-Mode.md'
+    - '10.3 The Sidebar': 'DashBoards/03.The-Sidebar.md'
+    - '10.4 View Mode': 'DashBoards/04.View-Mode.md'
+    - '10.5 Details Mode': 'DashBoards/05.Details-Mode.md'
 - 11. Keys:
     - '11.1 Overview': 'Keys/01.Overview.md'
     - '11.2 Using Keys': 'Keys/02.Using-Keys.md'
